# trace-encoder-lite

./: otlp_json.py  pyproject.toml  readme.md
.github/workflows/: ci.yaml
otlp_json/: __init__.py
test/: test_pure_python.py
